fixed movie cards
movie cards no longer overlap each other when adjusting screen size

--- a/src/components/movie-card/movie-card.scss
+++ b/src/components/movie-card/movie-card.scss
@@ -1,6 +1,12 @@
-.card {
+.movie-cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   margin: 10px;
-  width: 300px;
+}
+
+.card {
+  width: calc(100% - 20px);
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 
   .card-img-top {
